--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 MSc Thesis. Under Development.
 
-A framework built on top of Mallet (http://mallet.cs.umass.edu/) for automatic email tagging.
+A <strike>framework</strike> library built on top of Mallet (http://mallet.cs.umass.edu/) for automatic email tagging.
 
 It still has alot of garbage, tangled code and many things to be implemented.
